[package]
name = "simpple-vm"
version = "0.1.0"
edition = "2024"

[lib]
name = "simpple_vm"
path = "src/lib.rs"

[dependencies]
ahv = "0.3.0"
anyhow = "1.0"
bitfield = "0.19.1"
env_logger = "0.11.8"
keystone-engine = { version = "0.1.0", features = ["use-system-lib"] }
log = "0.4.27"
thiserror = "2.0"
